Added possibility to upload market data
