# src/main/java/net/finmath/smartcontract/service/controllers/PlainSwapEditorController.java
@@ -14,8 +14,6 @@ import net.finmath.util.TriFunction;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.env.Environment;
-import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.http.HttpStatus;
@@ -24,18 +22,17 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.ErrorResponseException;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 import org.xml.sax.SAXException;
 
 import javax.xml.datatype.DatatypeConfigurationException;
 import java.io.File;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.function.DoubleUnaryOperator;
 
 @RestController
@@ -43,7 +40,7 @@ import java.util.function.DoubleUnaryOperator;
 public class PlainSwapEditorController implements PlainSwapEditorApi {
 
     private final String schemaPath = "schemas/sdc-schemas/sdcml-contract.xsd"; //may be changed to allow for different versions of the schema
-    private final String marketDataPath = "net.finmath.smartcontract.client" + File.separator + "md_testset2.json";  // will be changed when we will accept market data from external sources
+
     @Value("${hostname}")
     private String hostname;
 
@@ -63,7 +60,7 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
     @Override
     public ResponseEntity<String> generatePlainSwapSdcml(PlainSwapOperationRequest plainSwapOperationRequest) {
         try {
-            return ResponseEntity.ok( new PlainSwapEditorHandler(plainSwapOperationRequest, plainSwapOperationRequest.getCurrentGenerator(), schemaPath).getContractAsXmlString());
+            return ResponseEntity.ok(new PlainSwapEditorHandler(plainSwapOperationRequest, plainSwapOperationRequest.getCurrentGenerator(), schemaPath).getContractAsXmlString());
         } catch (JAXBException | IOException | DatatypeConfigurationException | SAXException e) {
             ProblemDetail pd = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ErrorDetails.JAXB_ERROR_DETAIL);
             pd.setType(URI.create(hostname + ErrorTypeURI.JAXB_ERROR_URI));
@@ -87,7 +84,8 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
         }
         String marketData;
         try {
-            marketData = (new ClassPathResource(marketDataPath)).getContentAsString(StandardCharsets.UTF_8);
+
+            marketData = resourcePatternResolver.getResource("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.marketdata/active_dataset.json").getContentAsString(StandardCharsets.UTF_8);
         } catch (IOException e) {
             ProblemDetail pd = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ErrorDetails.MARKET_DATA_ERROR_DETAIL);
             pd.setType(URI.create(hostname + ErrorTypeURI.MARKET_DATA_ERROR_URI));
@@ -110,7 +108,7 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
     public ResponseEntity<List<CashflowPeriod>> getFixedSchedule(PlainSwapOperationRequest plainSwapOperationRequest) {
         String marketData;
         try {
-            marketData = (new ClassPathResource(marketDataPath)).getContentAsString(StandardCharsets.UTF_8);
+            marketData = resourcePatternResolver.getResource("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.marketdata/active_dataset.json").getContentAsString(StandardCharsets.UTF_8);
         } catch (IOException e) {
             ProblemDetail pd = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ErrorDetails.MARKET_DATA_ERROR_DETAIL);
             pd.setType(URI.create(hostname + ErrorTypeURI.MARKET_DATA_ERROR_URI));
@@ -137,7 +135,7 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
     public ResponseEntity<List<CashflowPeriod>> getFloatingSchedule(PlainSwapOperationRequest plainSwapOperationRequest) {
         String marketData;
         try {
-            marketData = (new ClassPathResource(marketDataPath)).getContentAsString(StandardCharsets.UTF_8);
+            marketData = resourcePatternResolver.getResource("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.marketdata/active_dataset.json").getContentAsString(StandardCharsets.UTF_8);
         } catch (IOException e) {
             ProblemDetail pd = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ErrorDetails.MARKET_DATA_ERROR_DETAIL);
             pd.setType(URI.create(hostname + ErrorTypeURI.MARKET_DATA_ERROR_URI));
@@ -175,7 +173,7 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
 
         String marketData;
         try {
-            marketData = (new ClassPathResource(marketDataPath)).getContentAsString(StandardCharsets.UTF_8);
+            marketData = resourcePatternResolver.getResource("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.marketdata/active_dataset.json").getContentAsString(StandardCharsets.UTF_8);
         } catch (IOException e) {
             ProblemDetail pd = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ErrorDetails.MARKET_DATA_ERROR_DETAIL);
             pd.setType(URI.create(hostname + ErrorTypeURI.MARKET_DATA_ERROR_URI));
@@ -206,31 +204,33 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
     }
 
     @Override
-    public ResponseEntity<List<String>> getSavedContracts(){
+    public ResponseEntity<List<String>> getSavedContracts() {
         List<String> savedContractsFilenames = new ArrayList<>();
         Resource[] savedContracts;
         try {
-            savedContracts = resourcePatternResolver.getResources("file:///"+Objects.requireNonNull(env.getProperty("storage.basedir"))+"/user1.savedcontracts/*");
+            savedContracts = resourcePatternResolver.getResources("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.savedcontracts/*");
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
         for (final Resource savedContract : savedContracts) {
-                savedContractsFilenames.add(savedContract.getFilename());
+            savedContractsFilenames.add(savedContract.getFilename());
         }
         return ResponseEntity.ok(savedContractsFilenames);
     }
 
     @Override
-    public ResponseEntity<PlainSwapOperationRequest> loadContract(String requestedFilename){
+    public ResponseEntity<PlainSwapOperationRequest> loadContract(String requestedFilename) {
         Resource[] savedContracts;
         try {
-            savedContracts = resourcePatternResolver.getResources("file:///"+Objects.requireNonNull(env.getProperty("storage.basedir"))+"/user1.savedcontracts/*");
+            savedContracts = resourcePatternResolver.getResources("file:///" + Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.savedcontracts/*");
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        Resource requestedContract = Arrays.stream(savedContracts).filter(contract -> Objects.requireNonNull(contract.getFilename()).contentEquals(requestedFilename)).findFirst().get();
+        Optional<Resource> requestedContractOptional = Arrays.stream(savedContracts).filter(contract -> Objects.requireNonNull(contract.getFilename()).contentEquals(requestedFilename)).findFirst();
+        Resource requestedContract = null;
+        if (requestedContractOptional.isPresent()) requestedContract = requestedContractOptional.get();
         try {
-            PlainSwapOperationRequest requestedRequest = objectMapper.readValue(requestedContract.getContentAsString(StandardCharsets.UTF_8), PlainSwapOperationRequest.class);
+            PlainSwapOperationRequest requestedRequest = objectMapper.readValue(Objects.requireNonNull(requestedContract).getContentAsString(StandardCharsets.UTF_8), PlainSwapOperationRequest.class);
             return ResponseEntity.ok(requestedRequest);
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -238,25 +238,42 @@ public class PlainSwapEditorController implements PlainSwapEditorApi {
     }
 
     @Override
-    public ResponseEntity<String> saveContract(SaveContractRequest saveContractRequest){
+    public ResponseEntity<String> saveContract(SaveContractRequest saveContractRequest) {
         String regex = "^[A-za-z0-9]{1,255}$";
         LocalDate date = LocalDate.now();
-        if(saveContractRequest.getName().matches(regex)){
-            File baseFolder = new File(Objects.requireNonNull(env.getProperty("storage.basedir"))+"/user1.savedcontracts/");
-            File targetFile = new File(baseFolder,date.toString()+saveContractRequest.getName()+".json");
+        if (saveContractRequest.getName().matches(regex)) {
+            File baseFolder = new File(Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.savedcontracts/");
+            File targetFile = new File(baseFolder, date + saveContractRequest.getName() + ".json");
             try {
                 targetFile.createNewFile();
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
             try {
-                objectMapper.writeValue(targetFile,saveContractRequest.getPlainSwapOperationRequest());
+                objectMapper.writeValue(targetFile, saveContractRequest.getPlainSwapOperationRequest());
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
-            return ResponseEntity.ok(date.toString()+saveContractRequest.getName()+".json");
+            return ResponseEntity.ok(date + saveContractRequest.getName() + ".json");
         }
         return ResponseEntity.ok("Request not fulfilled.");
+    }
+
+    @Override
+    public ResponseEntity<String> uploadMarketData(MultipartFile tradeData) {
+        File baseFolder = new File(Objects.requireNonNull(env.getProperty("storage.basedir")) + "/user1.marketdata/");
+        File targetFile = new File(baseFolder, "active_dataset.json");
+        try {
+            FileOutputStream fileOutputStream = new FileOutputStream(targetFile);
+            fileOutputStream.write(tradeData.getBytes());
+            fileOutputStream.flush();
+            fileOutputStream.close();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        return ResponseEntity.ok("ok");
+
     }
 
 
